Refactor CreateFolder. Add permission state sliders, separate groups, and filtering. [Finishes #135461963]

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -87,6 +87,10 @@ $FolderItemHeight : 25px;
   }
 }
 
+.FolderItem-permission {
+  margin-right: 8px;
+}
+
 .FolderItem-dropzone {
   display: none;
   position: absolute;
@@ -138,6 +142,10 @@ $FolderItemHeight : 25px;
 
     &:hover {
       background-color: $zorroa-lightgray;
+    }
+
+    &.disabled {
+      color: $zorroa-lightgray;
     }
 
     &.disabled:hover {
