--- a/src/components/Folders/CreateFolder.scss
+++ b/src/components/Folders/CreateFolder.scss
@@ -44,10 +44,11 @@
         font-size: 12px;
       }
 
-      input {
+      .CreateFolder-input-title-input {
         font-size: 14px;
         padding: 8px;
         background: none;
+        color: $zorroa-gray;
         border: 2px solid $zorroa-lightgray;
         border-radius: 3px;
         height: 40px;
@@ -56,7 +57,7 @@
       }
 
       .CreateFolder-public-private {
-        color: $zorroa-greyish-brown;
+        color: $zorroa-gray;
 
         &.disabled {
           color: $zorroa-lightgray;
@@ -73,51 +74,8 @@
       .CreateFolder-sharing {
         margin-top: 8px;
 
-        input[type=text] {
-          margin-top: 8px;
-          margin-bottom: 8px;
-          height: 30px;
-          font-size: 12px;
-          border: 1px solid $zorroa-lightgray;
-        }
-
         ::-webkit-scrollbar {
           width: 5px;
-        }
-
-        .CreateFolder-shared-with {
-          max-width: 100%;
-          .CreateFolder-selected-permission {
-            color: $zorroa-greyish-brown;
-            background-color: $zorroa-lightgray;
-            border-radius: 3px;
-            padding: 4px;
-            margin: 4px;
-
-            .icon-cross {
-              font-size: 12px;
-              margin-left: 4px;
-              color: $zorroa-gray
-            }
-          }
-        }
-        .CreateFolder-permissions {
-          max-height: 300px;
-          overflow-y: auto;
-          margin-top: 8px;
-
-          input[type=checkbox] {
-            width: auto;
-            height: auto;
-            padding: 0;
-            margin: 4px 8px;
-          }
-
-          .CreateFolder-permission {
-            color: $zorroa-gray;
-            font-size: 12px;
-            min-height: 20px;
-          }
         }
       }
     }
@@ -172,6 +130,211 @@
       }
     }
   }
+}
+
+.CreateFolder-perm-slider {
+  position: relative;
+  width: 60px;
+  margin-right: 4px;
+  @include flexRow;
+  @include flexAlignItemsCenter;
+
+  // No good way to style the lower filled portion of a slider in Chrome.
+  // So we use the input for control, but progress + div-based ticks for display.
+  input::-webkit-slider-thumb {
+    border: none;
+    width: 12px;
+    height: 12px;
+    margin-top:-5px;
+    margin-bottom:0;
+  }
+
+  input::-webkit-slider-runnable-track {
+    background: none;
+    border: none;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 2px;
+    border-radius: 2px;
+  }
+
+  .CreateFolder-perm-progress {
+    @include fullWidth;
+    position: absolute;
+    z-index: 1;
+
+    -webkit-appearance: none;
+    height: 2px;
+    background: none;
+
+    &::-webkit-progress-bar {
+      background-color: $zorroa-gray;
+    }
+
+    &::-webkit-progress-value {
+      color: transparent;
+      background-color: $zorroa-sickly-green;
+    }
+  }
+}
+
+.CreateFolder-shared-with {
+  max-width: 100%;
+  @include flexCol;
+}
+
+.CreateFolder-selected-permission {
+  color: $zorroa-greyish-brown;
+  background-color: rgba(192, 192, 192, 0.3);
+  border-radius: 3px;
+  padding: 4px;
+  margin: 2px 4px;
+
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  @include flexJustifySpaceBetween;
+
+  [class*='icon-'] {
+    font-size: 12px;
+    margin-right: 4px;
+    margin-left: 4px;
+    color: $zorroa-gray
+  }
+
+  .icon-cross2:hover {
+    color: $zorroa-sickly-green;
+  }
+}
+
+.CreateFolder-shared-with-permissions {
+  max-height: 120px;
+  overflow-y: auto;
+}
+
+.CreateFolder-shared-with-title {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  @include flexJustifySpaceBetween;
+  font-size: 12px;
+  font-stretch: condensed;
+  color: $zorroa-gray;
+  text-transform: uppercase;
+  margin-left: 4px;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.CreateFolder-shared-with-perm-icons {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  @include flexJustifySpaceBetween;
+
+  width: 60px;
+  margin-right: 32px;
+
+  [class*='icon-'] {
+    font-size: 11px;
+  }
+}
+
+.CreateFolder-perms-input {
+  padding: 0;
+  margin: 0 !important;
+  background: transparent;
+  z-index: 1;
+  input {
+    padding: 0;
+  }
+}
+
+.CreateFolder-perms-tick-row {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  @include flexJustifySpaceBetween;
+}
+
+.CreateFolder-perms-tick {
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: $zorroa-gray;
+
+  &.ticked {
+    background-color: $zorroa-sickly-green;
+    border: none;
+  }
+}
+
+.CreateFolder-filter-permission {
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  margin-left: 10px;
+  margin-right: 30px;
+
+  div[class*='icon-'] {
+    position: absolute;
+    left: 0;
+    bottom: 4px;
+    color: $zorroa-gray;
+  }
+}
+
+.CreateFolder-filter-permission-input {
+  @include fullWidth;
+
+  color: $zorroa-gray;
+  background: none;
+  border: none;
+  border-bottom: 1px solid $zorroa-lightgray !important;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 20px;
+  padding-right: 4px;
+
+  font-size: 12px;
+}
+
+.CreateFolder-permissions {
+  margin-top: 8px;
+
+  input[type=checkbox] {
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin: 4px 8px;
+  }
+
+  .CreateFolder-permission {
+    color: $zorroa-gray;
+    font-size: 12px;
+    min-height: 20px;
+  }
+
+  div[class*='icon-'] {
+    font-size: 12px;
+    margin-right: 4px;
+    color: $zorroa-gray;
+    opacity: 0.8;
+  }
+}
+
+.CreateFolder-permission-title {
+  text-transform: uppercase;
+  color: $zorroa-gray;
+  font-size: 13px;
+  line-height: 1.5em;
+}
+
+.CreateFolder-permission-items {
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 .CreateFolder-background {
