--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -14,7 +14,8 @@
   max-width: 100%;
 }
 
-.assets-layout {
+.Assets-layout {
+  width: 100%;
   position: relative;
 }
 
@@ -93,6 +94,15 @@
     background-color: $zorroa-sickly-green;
     &:hover { background-color: darken($zorroa-sickly-green, 15%); }
   }
+}
+
+.Assets-tableDrag {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  border-top: 1px solid $zorroa-lightgray;
+  border-bottom: 1px solid $zorroa-lightgray;
+  cursor: row-resize;
 }
 
 .TableToggle {
