Basic pan and zoom image controls.
Prevent the elastic scrolling effect.

Fix the Chrome image zoom performance issue

Chrome is auto-rendering images with bicubic filtering,
that is a bit too slow for interactive pan & zoom.

So, let's drop to nearest neighbor filtering while the
image is in motion, and put it back to high quality
as soon as the image stops moving.

[Finishes #132391221]

--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -14,14 +14,13 @@ Zorroa core (shared) css classes
 /*
 tread carefully!!!
 These attributes control full page settings, but they can be brittle in different browsers
-Make sure to
+Make sure to test in all browsers after making changes here.
 */
 html, body {
-//   min-height: 100vh;
-//   width: 100%;
-//   // overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   font-size: 14px;
-//   font-weight: 300;
   padding:0;
   margin:0;
 }
