--- a/src/components/Inspector/Inspector.scss
+++ b/src/components/Inspector/Inspector.scss
@@ -10,8 +10,6 @@
     height: 100%;
     max-width:100%;
     max-height:100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    overflow: hidden;
   }
 }
