--- a/src/components/Inspector/Pdf.scss
+++ b/src/components/Inspector/Pdf.scss
@@ -13,48 +13,71 @@
     color: $zorroa-faded-red;
     font-size: 18px;
   }
+}
 
-  .body {
-    @include flexOn;
-    @include fullWidth;
-    @include flexRow;
-    @include flexJustifyCenter;
-    overflow-y: auto;
+.Pdf-body {
+  @include flexOn;
+  @include fullWidth;
+  @include flexRow;
+  @include flexJustifyCenter;
+  @include flexAlignItemsCenter;
+  overflow-y: auto;
+  overflow-x: auto;
+  position: relative;
+  canvas {
+    position: absolute;
+    top:0;
 
-    canvas {
-      overflow: hidden;
-    }
+    // center horizontally
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+}
+
+.Pdf-controls {
+  @include flexRow;
+  @include flexJustifyCenter;
+  @include flexAlignItemsCenter;
+  height: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  background-color: black;
+  color: white;
+  margin-top: 12px;
+  box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
+  border-radius: 3px;
+  div {
+    margin: 10px;
   }
 
-  .controls {
-    @include flexRow;
-    @include flexJustifyCenter;
-    @include flexAlignItemsCenter;
-    height: 40px;
-    min-height: 40px;
-    max-height: 40px;
-    background-color: black;
+  button {
     color: white;
-    margin-top: 12px;
-    box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
-    border-radius: 3px;
-    div {
-      margin: 10px;
+    margin: 0;
+    border: none;
+    background: none;
+    font-size: 18px;
+
+    &:disabled {
+      color: $zorroa-darkgray;
     }
 
-    button {
-      color: white;
-      margin: 8px;
-      border: none;
-      background: none;
-
-      &:disabled {
-        color: $zorroa-darkgray;
-      }
-
-      &:hover:enabled {
-        color: $zorroa-sickly-green;
-      }
+    &:hover:enabled {
+      color: $zorroa-sickly-green;
     }
+  }
+}
+
+.Pdf-controls-group {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+
+  .border-right {
+    border-right: 1px solid $zorroa-darkgray;
+  }
+
+  .border-left {
+    border-left: 1px solid $zorroa-darkgray;
   }
 }
