--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -9,9 +9,6 @@
   // height is defined in JSX
 
   overflow: hidden;
-
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
 }
 
 .Table-settings {
@@ -54,13 +51,23 @@
   height: 100%;
 }
 
+.Table-header-sort {
+  font-size: 12px;
+}
+
 .Table-header-resizer {
   height: 100%;
-  width: 7px;
-  border-left: 1px solid $zorroa-lightgray;
-  border-right: 1px solid $zorroa-lightgray;
-  background-color: $zorroa-nearwhite;
+  width: 10px;
   cursor: col-resize;
+
+  // http://stackoverflow.com/a/39682926/1424242. If this breaks in or slows any browsers, we can always use a 1px wide centered child
+  background: linear-gradient(to right,
+    transparent 0%,
+    transparent calc(50% - 0.51px),
+    $zorroa-nearwhite calc(50% - 0.5px),
+    $zorroa-nearwhite calc(50% + 0.5px),
+    transparent calc(50% + 0.51px),
+    transparent 100%);
 }
 
 .Table-scroll-clip {
