--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?fdcv93');
-  src:  url('fonts/zorroa-icons.eot?fdcv93#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?fdcv93') format('woff2'),
-    url('fonts/zorroa-icons.ttf?fdcv93') format('truetype'),
-    url('fonts/zorroa-icons.woff?fdcv93') format('woff'),
-    url('fonts/zorroa-icons.svg?fdcv93#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?qdnens');
+  src:  url('fonts/zorroa-icons.eot?qdnens#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?qdnens') format('woff2'),
+    url('fonts/zorroa-icons.ttf?qdnens') format('truetype'),
+    url('fonts/zorroa-icons.woff?qdnens') format('woff'),
+    url('fonts/zorroa-icons.svg?qdnens#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,30 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-collapse:before {
+  content: "\e947";
+}
+.icon-expand:before {
+  content: "\e949";
+}
+.icon-volume-high:before {
+  content: "\e94a";
+}
+.icon-x3:before {
+  content: "\e94b";
+}
+.icon-x2:before {
+  content: "\e94c";
+}
+.icon-x:before {
+  content: "\e94d";
+}
+.icon-individual:before {
+  content: "\e945";
+}
+.icon-group:before {
+  content: "\e946";
 }
 .icon-playonce:before {
   content: "\e938";
@@ -204,6 +228,9 @@
 }
 .icon-search:before {
   content: "\e904";
+}
+.icon-sort:before {
+  content: "\e94e";
 }
 .icon-sort-asc:before {
   content: "\e90b";
