Compute assets layout lazily; fix scroll position when opening sidebar

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -10,7 +10,6 @@
 .assets-scroll {
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 8px;
   max-width: 100%;
 }
 
@@ -97,6 +96,7 @@
 }
 
 .Assets-tableDrag {
+  @include flexOff;
   position: relative;
   width: 100%;
   height: 10px;
