--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -180,6 +180,7 @@ $zorroa-Sidebar-width : 340px;
 @mixin flexJustifySpaceBetween { -webkit-justify-content: space-between ; -moz-justify-content: space-between ; -ms-flex-pack: space-between ; justify-content: space-between ; }
 
 @mixin flexAlignItemsCenter { -webkit-align-items: center     ; -moz-align-items: center     ; -ms-align-items: center     ; align-items: center     ; }
+@mixin flexAlignItemsStart  { -webkit-align-items: flex-start ; -moz-align-items: flex-start ; -ms-align-items: flex-start ; align-items: flex-start ; }
 
 @mixin flexCenter {
   @include flexRow;
