Expand rows to the correct height when toggling array fields

--- a/src/components/Table/TableField.scss
+++ b/src/components/Table/TableField.scss
@@ -5,13 +5,16 @@
 }
 
 .TableField-array {
-  @include flexRow;
-  @include flexAlignItemsCenter;
   @include nowrap;
   overflow: hidden;
   &.isOpen {
     @include flexCol;
     @include flexAlignItemsStart;
+    @include flexJustifyStart;
+  }
+  &:not(.isOpen) {
+    @include flexRow;
+    @include flexAlignItemsCenter;
   }
 }
 
@@ -20,10 +23,11 @@
   @include flexOff;
   width: 16px;
   height: 16px;
+  border-radius: 8px;
   color: $zorroa-sickly-green;
   background-color: rgba(0,0,0,0.1);
   cursor: pointer;
-  margin-right: 3px;
+  margin: 4px;
 
   &:hover {
     color: $zorroa-light-green;
@@ -34,7 +38,7 @@
 .TableField-tag {
   @include flexRowCenter;
   padding: 3px 5px;
-  margin-right: 3px;
+  margin: 4px;
   border-radius: 3px;
   color: $zorroa-greyish-brown;
   background-color: rgba(0,0,0,0.1);
