--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -130,7 +130,7 @@ $tableResizeRightPadding: 20px;
 
 .Table-body .Table-row:hover {
   color: #fff;
-  background-color: $zorroa-gray;
+  background-color: $zorroa-lightgray;
 }
 
 .Table-cell {
