Don't let Editbar shrink, even when window is small

--- a/src/components/Assets/Editbar.scss
+++ b/src/components/Assets/Editbar.scss
@@ -1,6 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .Editbar {
+  @include flexOff;
   @include flexRow;
   @include fullWidth;
   @include flexJustifySpaceBetween;
