--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -9,6 +9,7 @@ Zorroa core (shared) css classes
 
 // https://fonts.google.com/?query=roboto&category=Sans+Serif,Display,Handwriting,Monospace&selection.family=Roboto
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 
 /*
