Store sync value in app.syncMetadataAndTable. [Fixes #135886043][Fixes #135886011]

--- a/src/components/DisplayOptions/DisplayOptions.scss
+++ b/src/components/DisplayOptions/DisplayOptions.scss
@@ -57,6 +57,11 @@
       text-transform: none;
       margin-right: 50px;
       margin-left: 6px;
+      @include noSelect;
+
+      &:hover {
+        color: $zorroa-sickly-green;
+      }
     }
 
     .DisplayOptions-close {
