David/selection sync (#193)
* Show the current asset selection in the Table

* Clarify the Assets elements sizing comments

* Set selectionCounter whenever the selection changes

* Syncronize Table scrolling with current asset selection

* Add selection via clicking on Table rows

* Don't clear selection when updating query

* Syncronize Asset scroll with current Table selection

* Prevent row select when toggling a Table field open/closed [Finishes #548a8770b9]

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -115,8 +115,10 @@ $tableResizeRightPadding: 20px;
 
   text-align: left;
   color: $zorroa-greyish-brown;
+  border: 2px solid transparent;
 
   &.even { background-color: #fff; }
+  &.isSelected { border: 2px solid $zorroa-sickly-green; }
 }
 
 
@@ -134,6 +136,7 @@ $tableResizeRightPadding: 20px;
 }
 
 .Table-cell {
+  @include noSelect;
   @include clampText;
   padding: 8px;
 }
