--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -44,6 +44,7 @@
     position: absolute;
     text-align: left;
     top: 100%;
+    right: 0;
     z-index: 1000;
     box-shadow: 0 0 30px 0 $zorroa-gray;
   }
