Implement folder trash. [Finishes #133895329] (#194)
* Implement folder trash. [Finishes #133895329]

* Fix trash delete using Axios delete WAR.

* Add cursor:pointer to trash & trashed folder context menu

* Fix trash items centering when context menu is open; Fix padding in context menu

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -138,7 +138,8 @@ $FolderItemHeight : 25px;
     padding-left: 0;
     padding-right: 0;
     padding-top: 4px;
-    padding-bottom: 8px;
+    padding-bottom: 4px;
+    cursor: pointer;
 
     &:hover {
       background-color: $zorroa-lightgray;
