--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?xcvbo1');
-  src:  url('fonts/zorroa-icons.eot?xcvbo1#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?xcvbo1') format('woff2'),
-    url('fonts/zorroa-icons.ttf?xcvbo1') format('truetype'),
-    url('fonts/zorroa-icons.woff?xcvbo1') format('woff'),
-    url('fonts/zorroa-icons.svg?xcvbo1#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?qzwo7a');
+  src:  url('fonts/zorroa-icons.eot?qzwo7a#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?qzwo7a') format('woff2'),
+    url('fonts/zorroa-icons.ttf?qzwo7a') format('truetype'),
+    url('fonts/zorroa-icons.woff?qzwo7a') format('woff'),
+    url('fonts/zorroa-icons.svg?qzwo7a#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,12 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-emptybox:before {
+  content: "\e952";
+}
+.icon-zorroa-person-01:before {
+  content: "\e950";
 }
 .icon-collapse:before {
   content: "\e947";
