--- a/src/components/Inspector/Image.scss
+++ b/src/components/Inspector/Image.scss
@@ -1,6 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .Image {
+  @include flexOn;
   width: 100%;
   height: 100%;
   max-width:100%;
@@ -8,11 +9,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  position: relative;
-  cursor: move; /* fallback if grab cursor is unsupported */
-  cursor: grab;
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
 }
 
 .Image-frame {
@@ -20,41 +16,5 @@
   height: 100%;
   max-width:100%;
   max-height:100%;
-  box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
-}
-
-.Image-controls {
-  position: absolute;
-  bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  width: 140px;
-  border-radius: 3px;
-  box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
-  color: white;
-  background-color: black;
-  padding: 10px;
-
-  @include flexRow;
-  @include flexAlignItemsCenter;
-  @include flexJustifySpaceBetween;
-
-  button:disabled {
-    color: $zorroa-darkgray;
-    &:hover {
-      color: $zorroa-darkgray;
-    }
-  }
-
-  [class*='icon-'] {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 20px;
-    &:hover {
-      color: $zorroa-sickly-green
-    }
-  }
+  @include flexCol;
 }
